bin/testsuite/tests/compiler/src/errors/compiler5148.swg
#global testerror "Err0330"

#test
{
    //alias A = s32
    //A a = 0
    s32 a = 0
}